ikhaaan last commit

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 class="text-uppercase">I am Sara El Otmani</h1>
                 <h5 class="text-uppercase">Software Engineering Student</h5>
                 <div class="d-flex align-items-center">
-                  <a class="primary_btn" href="./contact.html"><span>Hire Me</span></a>
+                  <a class="primary_btn" href="#contact"><span>Hire Me</span></a>
                   <a class="primary_btn tr-bg" href="CV_SARA_EL_OTMANI.pdf" download><span>Get CV</span></a>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                 <p>Alongside coding, I actively mentor student teams, organize training sessions, and contribute to student clubs focused on project-based learning and innovation.</p>               
                 <p>I enjoy turning ideas into functional, elegant products and collaborating with others to make a positive impact.</p>               
                 <p><strong>Let's build something meaningful together.</strong></p>
-                <a class="primary_btn mt-3" href="#"><span>Download CV</span></a>
+                <a class="primary_btn mt-3" href="CV_SARA_EL_OTMANI.pdf" download><span>Download CV</span></a>
               </div>
             </div>
           </div>
